<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bantuan">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:background="#2354B3"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/bantuan"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:background="#4A94A7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <LinearLayout
                android:background="@drawable/border_text"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="200dp">

                <LinearLayout

                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:layout_width="340dp"
                    android:layout_height="250dp"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/isi_bant1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="20dp"
                        android:paddingLeft="20dp"
                        android:text="@string/isi_bant2"
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="30dp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:text="@string/cp"
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>