<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFD6E9"
    tools:context=".Dispepsia">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_label2"
                android:text="@string/penyakitDispepsia"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/deskripsi_label2"
                android:text="@string/deskripsiDispepsia"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/solusiDispepsia"
                android:text="@string/solusiDispepsia"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                />

            <Button
                android:id="@+id/bt_activity3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="Back"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>