<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tentang">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:background="#2354B3"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="Tentang Aplikasi"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:background="#4A94A7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <LinearLayout
                android:background="@drawable/border_text"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp">

                <LinearLayout
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="130dp"
                        android:src="@drawable/lambung"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/nama_app"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="310dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/deskripsi_tentang"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:textColor="@android:color/white"
                        android:layout_marginTop="30dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/isi_tent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textSize="16sp"
                        android:layout_marginTop="25dp"
                        android:layout_gravity="center"
                        android:text="@string/dev_year"
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textSize="16sp"
                        android:layout_marginTop="15dp"
                        android:layout_gravity="center"
                        android:text="@string/versi_app"
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>