<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bgwarna">

    //Logo Lambung

    //button Register
    //button Login

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:background="#2354B3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_app"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:gravity="center"
        />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/lambung" />

    <Button
        android:textSize="25sp"
        android:layout_gravity="center"
        android:id="@+id/register_btn"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/inlogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/btdaftar"
        />

    <Button
        android:textSize="25sp"
        android:id="@+id/inlogin"
        android:text="@string/btlogin"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
        </LinearLayout>
        </LinearLayout>
</RelativeLayout>