<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@color/bgwarna">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/lambung" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/emailTIL"
        android:layout_marginTop="30dp">
        <EditText
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:id="@+id/emailEt"
            android:inputType="textEmailAddress"
            android:hint="@string/masukkan_email_anda"
            android:layout_width="350dp"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/passwordTIL"
        android:layout_below="@id/emailTIL"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="30dp">
        <EditText
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:id="@+id/passwordEt"
            android:inputType="textPassword"
            android:hint="@string/masukkan_password_anda"
            android:layout_width="350dp"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    //Button Register

    //Click to Login

    <Button
        android:layout_gravity="center"
        android:id="@+id/registerBtn"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTIL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="@color/bgwarna"
        android:background="@drawable/button_background"
        android:text="@string/btregister"
        android:textSize="20dp" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/have_accountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account_login"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_below="@id/registerBtn"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"/>
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>